<resources>

    <string name="app_name">豆豆酷跑</string>
    <string name="douDouKuPao_name">DouDouKuPao</string>
    <string name="main_button_father">爸爸</string>
    <string name="main_button_mother">妈妈</string>
    <string name="personalActivity_name">PersonalActivity</string>
    <string name="personalActivity_addInfo">录入数据</string>
	<string name="personalActivity_viewHistory">查看历史</string>
	<string name="infoEntryActivity_name">InfoEntryActivity</string>
	<string name="historyActivity_name">HistoryActivity</string>
	<string name="infoEntry_date">记步日期</string>
	<string name="infoEntry_counter">步数</string>
	<string name="infoEntry_button_ok">确认</string>
	<string name="personId_father">father</string>
	<string name="personId_mother">mother</string>
	<string name="personalActivitiy_title">选择选项</string>
	<string name="infoEntryActivity_title">录入数据</string>
	<string name="historyActivity_title">查看历史记录</string>
	<string name="douDouKuPaoActivity_title">豆豆酷跑</string>
	<string name="main_best_counter">最好成绩</string>
	<string name="main_best_date">纪录时间</string>
	<string name="main_default_counter">0步</string>
	<string name="welcomeViewPager_name">WelcomeViewPager</string>
	<string name="welcomeActivity_name">WelcomeActivity</string>
	<string name="button_go">进入豆豆酷跑</string>
	<string name="viewpage1_text"></string>
	<string name="viewpage2_text"></string>
	<string name="viewpage3_text"></string>
	<string name="viewpage4_text"></string>
</resources>
