<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
      	android:layout_weight="1"
      	android:text="@string/infoEntry_date"/>
    <DatePicker 
        android:id="@+id/datePicker_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:calendarViewShown="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/infoEntry_counter"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        
        <NumberPicker
        	android:id="@+id/numberPicker_counter0"
      		android:layout_width="0dp"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:tag="0" />
        <NumberPicker
        	android:id="@+id/numberPicker_counter1"
      		android:layout_width="0dp"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:tag="1" />
        <NumberPicker
        	android:id="@+id/numberPicker_counter2"
      		android:layout_width="0dp"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:tag="2" />
        <NumberPicker
        	android:id="@+id/numberPicker_counter3"
      		android:layout_width="0dp"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:tag="3" />
        <NumberPicker
        	android:id="@+id/numberPicker_counter4"
      		android:layout_width="0dp"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:tag="4" />
        <NumberPicker
        	android:id="@+id/numberPicker_counter5"
      		android:layout_width="0dp"
      		android:layout_height="match_parent"
      		android:layout_weight="1"
      		android:tag="5" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/infoEntry_button_ok" />
</LinearLayout>
